src/test/ui/self/arbitrary_self_types_pin_lifetime_mismatch-async.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:10:45
   |
LL |     async fn a(self: Pin<&Foo>, f: &Foo) -> &Foo { f }
   |                                             ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:15:60
   |
LL |     async fn c(self: Pin<&Self>, f: &Foo, g: &Foo) -> (Pin<&Foo>, &Foo) { (self, f) }
   |                                                            ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:15:67
   |
LL |     async fn c(self: Pin<&Self>, f: &Foo, g: &Foo) -> (Pin<&Foo>, &Foo) { (self, f) }
   |                                                                   ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0106`.
